# contact-on-demand

backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: db.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 02672e6fce4f_init.py  54d9aa5ce0f9_jwt_token_added.py  558d879c66a9_changed_user_base.py  a56044ab03dc_email_none.py  c5f1099ab166_security_qa_deprecation.py  d0d8ec6878cd_contact_feature.py  d50a871cc6a4_user_contact_backpopulate_fixed.py  f135a5c46a5e_init.py
backend/app/api/: deps.py  main.py
backend/app/api/routers/: contacts.py  login.py  phones.py  security_qas.py  users.py  utils.py
backend/app/routers/: auth.py
backend/tests/api/: test_main.py
frontend/: .dockerignore  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AddContactDialog.tsx  AddPhoneDialog.tsx  ContactCard.tsx  ContactList.tsx  ProtectedRoute.tsx  UploadVCFDialog.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx
