[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contact-on-demand-backend"
version = "0.1.0"
description = "Contact on Demand Backend Service"
requires-python = ">=3.8"
dependencies = [
    "alembic>=1.16.5",
    "annotated-types>=0.7.0",
    "anyio>=4.11.0",
    "argon2-cffi>=23.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "async-timeout>=5.0.1",
    "asyncpg>=0.30.0",
    "bcrypt>=5.0.0",
    "certifi>=2025.8.3",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "click>=8.3.0",
    "colorama>=0.4.6",
    "coverage>=7.10.7",
    "dnspython>=2.8.0",
    "email-validator>=2.3.0",
    "exceptiongroup>=1.3.0",
    "fastapi>=0.118.0",
    "fastapi-cli>=0.0.13",
    "fastapi-cloud-cli>=0.3.0",
    "greenlet>=3.2.4",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.6.4",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "Jinja2>=3.1.6",
    "Mako>=1.3.10",
    "markdown-it-py>=4.0.0",
    "MarkupSafe>=3.0.3",
    "mdurl>=0.1.2",
    "packaging>=25.0",
    "passlib>=1.7.4",
    "pluggy>=1.6.0",
    "psycopg2-binary>=2.9.10",
    "pwdlib>=0.2.1",
    "pycparser>=2.23",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "pydantic_core>=2.41.4",
    "Pygments>=2.19.2",
    "PyJWT>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "PyYAML>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "rich-toolkit>=0.15.1",
    "rignore>=0.7.0",
    "sentry-sdk>=2.39.0",
    "shellingham>=1.5.4",
    "sniffio>=1.3.1",
    "SQLAlchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "starlette>=0.48.0",
    "tenacity>=9.1.2",
    "tomli>=2.2.1",
    "typer>=0.19.2",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "urllib3>=2.5.0",
    "uvicorn>=0.37.0",
    "watchfiles>=1.1.0",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
test = [
    "coverage==7.10.7",
    "pytest==8.4.2",
    "tomli==2.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["app"]