[project]
name = "contact-on-demand-backend"
version = "0.1.0"
description = "Contact on Demand Backend Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "coverage>=7.11.0",
    "fastapi[standard]>=0.121.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "sqlmodel>=0.0.27",
    "vobject>=0.9.9",
]
